# async_modbus

./: .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  async_modbus.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  umodbus_numpy.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
async_modbus/: __init__.py  core.py  umodbus_numpy.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: simple_asyncio_tcp_client.py  simple_curio_tcp_client.py  simple_tcp_client.py  simple_tcp_server.py
tests/: __init__.py  test_async_modbus.py
