[bumpversion]
current_version = 0.1.4
commit = True
tag = True

[bumpversion:file:async_modbus/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = async-modbus
version = attr: async_modbus.__version__
author = Tiago Coutinho
author_email = coutinhotiago@gmail.com
license = GNU General Public License v3
license_file = LICENSE
description = Async ModBus python library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = modbus, tcp, rtu, async_modbus, asyncio
url = https://github.com/tiagocoutinho/async-modbus
classifiers =
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        Natural Language :: English
        Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
zip_safe = true
python_requires = >=3.6
tests_require = pytest >=3

[options.extras_require]
numpy = numpy

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs
