[metadata]
name = async_modbus
version = attr: async_modbus.__version__
description = Async ModBus python library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tiagocoutinho/async-modbus
author = Tiago Coutinho
author_email = coutinhotiago@gmail.com
license = GNU General Public License v3
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = modbus, tcp, rtu, async_modbus, asyncio

[options]
packages = find:
install_requires =
    connio>=0.2.0
    umodbus>=1.0.4
python_requires = >=3.6
include_package_data = True
tests_require =
    pytest >=6
    pytest-asyncio
    pytest-cov
zip_safe = true

[options.extras_require]
numpy =
    numpy>=1.1
tests =
    pytest>=6
    pytest-asyncio
    pytest-cov

[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:async_modbus/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
